Make tiny change to entry-header margins to fix gap in FF@Win

--- a/editor-style.css
+++ b/editor-style.css
@@ -431,6 +431,9 @@ textarea {
 .entry-format-image img {
   display: block;
 }
+.wp-video {
+  margin-bottom: 1em;
+}
 /* Make sure embeds and iframes fit their containers */
 embed,
 iframe,
